# 2048-game

./: README.md
projet/: AboutScreen.qml  CMakeLists.txt  Cell.qml  GameBoard.qml  GameButton.qml  GameOverScreen.qml  GameScreen.qml  GameWindow.qml  InterfaceJeu.qml  InterfaceMenu.qml  Main.qml  MainMenu.qml  MenuButton.qml  Menu_color.qml  OptionsScreen.qml  ScoreBoard.qml  Tile.qml  board.cpp  board.h  boardmodel.cpp  boardmodel.h  colorpicker.cpp  colorpicker.h  damierdyn.cpp  damierdyn.h  direction.h  game.cpp  game.h  gamecontroller.cpp  gamecontroller.h  main.cpp  main.qml  menubutton.cpp  menubutton.h  qml.qrc  ressources.qrc  tile.cpp  tile.h  undo.cpp  undo.h
